--- a/src/FsPass.Console/FsPass.Console.fsproj
+++ b/src/FsPass.Console/FsPass.Console.fsproj
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>9a3e3616-b768-4077-b6eb-64964ca34211</ProjectGuid>
+    <ProjectGuid>{9A3E3616-B768-4077-B6EB-64964CA34211}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>FsPass.Console</RootNamespace>
     <AssemblyName>FsPass.Console</AssemblyName>
@@ -17,7 +16,6 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <Tailcalls>true</Tailcalls>
     <OutputPath>bin\Debug\</OutputPath>
@@ -37,6 +35,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DocumentationFile>bin\Release\FsPass.Console.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Chessie">
@@ -55,8 +54,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FsPass.Core\FsPass.Core.fsproj">
       <Name>FsPass.Core</Name>
-      <Project>{ee62a7c5-6edf-4d7c-8fb7-7fbd5f9bb7b3}</Project>
-      <Private>True</Private>
+      <Project>{EE62A7C5-6EDF-4D7C-8FB7-7FBD5F9BB7B3}</Project>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
